# Molecular_Dynamic_Simulation

./: .gitignore  CMakeLists.txt  README.md  start.batch  start.sh  start_srun.sh  start_srun_juelich.sh
cmake/: BuildExternalProject.cmake
data_analysis/: LJ_potential_test.py  energy.py  mean_squared_trajectory.py  particle_animation.py  plot_3D_scatter.py  plot_line.py  test_of_script.ipynb  velocity_distribution.py  未命名.ipynb
data_analysis/.ipynb_checkpoints/: 未命名-checkpoint.ipynb
include/: main.hpp
include/MD/: MDSimulation.hpp  neighbor.hpp  periodic_boundary.hpp  potential.hpp  velocity_verlet.hpp
include/aux_func/: additional.hpp  assign.hpp  is_reg.hpp  str_split.hpp
include/classes/: MDParameter.hpp  partical.hpp
include/export/: write_data.hpp
include/import/: lattice.hpp  read_data.hpp
input/: 3_scatter_nnl.txt  3_scatter_no_nnl.txt  512N 30 0001 data.txt  512N 30 0005 data.txt  N1000_data.txt  all_Particles.txt  all_Particles_4.txt  data new force 0.001 no eq.txt  data.txt  eq 1000 0002.txt  eq 1000 0005.txt  eq 1000.txt  eq 10000.txt  eq 5000 0002.txt  init_data.txt  input.txt  neighbor_list.txt  nnl_neighbor_list.txt  no eq.txt  no_neighbor.txt  no_nnl_neighbor_list.txt  no_scatter_nnb_data.txt  no_scatter_no_nnl_data.txt  test_Cut_LJ_Potential.txt  with eq 1000.txt  with_acceleration.txt  with_neighbor.txt
src/: main.cpp  test  test.cpp
src/MD/: MDSimulation.cpp  neighbor.cpp  periodic_boundary.cpp  potential.cpp  velocity_verlet.cpp
src/aux_func/: assign.cpp  is_reg.cpp  str_split.cpp
src/classes/: MDParameter.cpp  partical.cpp
(+4 files in other folders)
