CMAKE_MINIMUM_REQUIRED(VERSION 3.1...3.5)


add_compile_options(-std=c++11 -Wall -Werror)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
INCLUDE(BuildExternalProject)

PROJECT(MD LANGUAGES C CXX)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

build_external_cmake_project(Eigen_ext "${CMAKE_SOURCE_DIR}/lib/eigen-3.3.7.tar.gz")
FIND_PACKAGE(Eigen3 3.3 REQUIRED NO_MODULE)

FILE(GLOB_RECURSE SRC_FILES "src/*.cpp")
SET(INCLUDE_DIRECTORIES
	"${CMAKE_SOURCE_DIR}/include"
	"${CMAKE_SOURCE_DIR}/include/aux_func"
	"${CMAKE_SOURCE_DIR}/include/classes"
	"${CMAKE_SOURCE_DIR}/include/export"
	"${CMAKE_SOURCE_DIR}/include/import"
	"${CMAKE_SOURCE_DIR}/include/MD"
)

ADD_EXECUTABLE(main "${SRC_FILES}")
TARGET_INCLUDE_DIRECTORIES(main PUBLIC "${INCLUDE_DIRECTORIES}")
TARGET_LINK_LIBRARIES(main PRIVATE Eigen3::Eigen)
SET_TARGET_PROPERTIES(main PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF)

